translating footer and header.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="masthead">
   <div class="container">
     <span class="icon">&#9997;</span>
-    <h1>{{ site.name }}</h1>
-    <p class="lead">{{ site.description }}</p>
+    <h1>{{ site.name_ptbr }}</h1>
+    <p class="lead">{{ site.description_ptbr }}</p>
 
     <p class="masthead-links">
       <a href="https://github.com/mdo/code-guide">
