changing the title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="pt-br">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link href="public/ico/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
     <title>
-      {{ site.name }}
+      {{ site.name_ptbr }}
     </title>
 
     <link rel="stylesheet" href="{{ site.url }}/code-guide.css">
